# ayuco

./: AGENTS.md  README.md  ayuco.db  ayuco.db-shm  ayuco.db-wal  config.example.json  install.sh  main.py  pyproject.toml
ayuco/: composition.py  config.py  logging.py
ayuco/adapters/: cli.py
ayuco/adapters/telegram/: bot.py
ayuco/domain/entities/: __init__.py  message.py
ayuco/domain/ports/: __init__.py  channel.py  llm.py  memory.py  repository.py  tool_provider.py
ayuco/domain/use_cases/: __init__.py  execute_tool.py  handle_message.py  load_context.py
ayuco/infrastructure/llm/: openai_provider.py
ayuco/infrastructure/mcp/: mcp_tool_provider.py
ayuco/infrastructure/memory/: sliding_window.py  summarizer.py
ayuco/infrastructure/persistence/: message_repository.py
ayuco/infrastructure/sandbox/: bwrap_executor.py  tool_provider.py
