[project]
name = "ayuco"
version = "0.1.0"
description = "Minimal AI agent — Telegram + SQLite + MCP + sandbox"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-telegram-bot>=22.8",
    "httpx>=0.27",
    "aiosqlite>=0.20",
    "mcp>=1.27,<2",
]

[dependency-groups]
dev = ["ruff>=0.8"]

[project.scripts]
ayuco = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
